FIx similar reads alignment

--- a/themes/basakbeykoz/react-src/src/blog/_postList.scss
+++ b/themes/basakbeykoz/react-src/src/blog/_postList.scss
@@ -7,6 +7,10 @@
 
     &-wrapper{
         grid-area: PostList-wrapper;
+
+        & > h4 {
+            text-align: center;
+        }
     }
     
     li {
